[project]
name = "restaurant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "psycopg2>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "ryan-tool",
    "sqlalchemy>=2.0.49",
]

[tool.uv.sources]
ryan-tool = { git = "https://github.com/syh053/ryan_tool.git" }
